--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -5,8 +5,12 @@ main {
   background-color: $page-background-color;
   overflow: hidden;
   min-width: 60%;
-  box-shadow: 0px 4px 8px 4px #ccc;
   padding: 10px;
+
+  &:hover {
+    box-shadow: 0px 4px 8px 4px #ccc;
+    transition: 0.5s;
+  }
 
   .page-article-content {
     align: center;
