--- a/_sass/jekyll-wgdd.scss
+++ b/_sass/jekyll-wgdd.scss
@@ -3,6 +3,7 @@
 @import "jekyll-wgdd/core";
 @import "jekyll-wgdd/header";
 @import "jekyll-wgdd/nav";
+@import "jekyll-wgdd/sidebar";
 @import "jekyll-wgdd/toc";
 @import "jekyll-wgdd/main";
 @import "jekyll-wgdd/footer";
