Add support for a social link sidebar
Also add classes for AWS 5

--- a/_includes/page-sidebar.html
+++ b/_includes/page-sidebar.html
@@ -5,8 +5,8 @@
       <button class="page-sidebar-label">Open Sidebar Content</button>
       <h4 class="page-sidebar-label" id="page-sidebar-label">Sidebar</h4>
     </header>
-    <ul class="page-sidebar-content">
-      {% include social.html authorid=author html=li class="social_link" %}
+    <ul class="page-sidebar-content"><!-- {{ author | inspect }}-->
+      {%- include social.html authorid=author html='li' attr=foo class='social_link' -%}
     </ul>
   </nav>
 </aside>
