Add artifact to display sidebar on button press

--- a/_sass/jekyll-wgdd/_sidebar.scss
+++ b/_sass/jekyll-wgdd/_sidebar.scss
@@ -29,4 +29,8 @@ aside.page-side {
       display: block;
     }
   }
+
+  //&:focus-within ul.page-sidebar-content {
+  //  display: block;
+  //}
 }
