--- a/_includes/social/home.html
+++ b/_includes/social/home.html
@@ -1,1 +1,1 @@
-{%- include social/template.html base=include.res tip="My Homepage" text="Homepage" -%}
+{%- include social/template.html base=include.res tip="My Homepage" fa="fas fa-globe" text="Homepage" -%}
