--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
   <meta name="theme-color" content="{{ conf.mobile.theme_color }}">
   {% endif -%}
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/main.css' | relative_url }}">
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
   <!--
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
