Install a sidebar, that shows on the button click
Use a picture for the button if defined later! Also move the sidebar and the
nav button a bit more away from the left border.

--- a/_includes/page-sidebar.html
+++ b/_includes/page-sidebar.html
@@ -2,8 +2,8 @@
 <aside class="page-side" aria-labelledby="page-side-label">
   <nav class="page-side-nav" aria-labelledby="page-side-label">
     <header class="page-sidebar-header">
-      <button class="page-sidebar-label">Open Sidebar Content</button>
-      <h4 class="page-sidebar-label" id="page-sidebar-label">Sidebar</h4>
+      <button class="page-sidebar-button" title="Open contact information"><i class="fas fa-user-edit"></i></button>
+      <h4 class="page-sidebar-label" id="page-sidebar-label">Follow or contact the author</h4>
     </header>
     <ul class="page-sidebar-content">
       {%- include social.html authorid=author html='li' attr=foo class='social_link' -%}
