--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -2,7 +2,7 @@ nav.page-navigation-main {
   position: fixed !important;
   top: 0;
   left: 0;
-  padding: $head-padding-top;
+  padding: $head-padding-top 2*$head-padding-top;
   z-index: $sidebar-z-index;
   height: 100%;
   width: 0;
@@ -55,6 +55,7 @@ nav.page-navigation-main {
         width: 100%;
         text-align: left;
         line-height: initial;
+        padding: 5px 0 5px 2*$head-padding-top;
 
         &:after {
           content: "\25bc";
@@ -73,7 +74,7 @@ nav.page-navigation-main {
 
       a {
         display: block;
-        padding: 5px 0;
+        padding: 5px 0 5px 2*$head-padding-top;
         text-decoration: none;
         color: #000;
       }
