--- a/_sass/jekyll-wgdd/_sidebar.scss
+++ b/_sass/jekyll-wgdd/_sidebar.scss
@@ -7,10 +7,11 @@ aside.page-side {
   margin: 2em 2*$head-padding-top !important;
   width: 5%;
   height: 100px;
-  z-index: $main-z-index + 1;
+  //z-index: $main-z-index + 1;
   //border: 1px solid #ccc;
   //border-radius: 10px;
   //background-color: $nav-background-color;
+  z-index: $sidebar-z-index + 1;
 
   &:after {
     content: "";
