--- a/_sass/jekyll-wgdd/_sidebar.scss
+++ b/_sass/jekyll-wgdd/_sidebar.scss
@@ -35,6 +35,12 @@ aside.page-side {
     padding: 0;
     margin: 0;
 
+    &:active,
+    &:focus {
+      border: none !important;
+      outline: none !important;
+    }
+
     i {
       display: block;
       font-size: $nav-button-size;
