--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,25 +1,13 @@
 {%- comment -%}
 
-  include.authorid: author name or id
+  include.author:   author name or id
   include.html:     HTML element to surround it
   include.attr:     HTML attributes to add to element
   include.class:    HTML element class
 
-  The following lines will determine the page author
-
 {%- endcomment -%}
 
-{%- assign author = site.authors | where: "name", include.authorid | first -%}
-{%- unless author -%}
-{%- assign author = site.authors | where_exp: "author", "author.name" == include.authorid | first -%}
-{%- endunless -%}
-
-{%- comment -%}
-
-{%- endcomment -%}
-
-{%- if author.links.size > 0 -%}
-{%- for link in author.links -%}
+{%- for link in include.author.socials -%}
 {%- if include.html -%}
 <{{ include.html }} {%- if include.attr %} {{ include.attr }}{%- endif  -%} {%- if include.class %} class="{{ include.class }}"{%- endif  -%}>
 {%- endif  -%}
@@ -30,4 +18,3 @@
 </{{ include.html }}>
 {%- endif -%}
 {%- endfor -%}
-{%- endif -%}
