Fix dropdown menu for Edge
Edge doesn't know :focus-within. So use :focus instead

--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -63,6 +63,10 @@ nav.page-navigation-main {
           content: "\25bc";
           text-align: right;
         }
+
+        &:focus ~ ul {
+          display: block;
+        }
       }
 
       ul {
