Fix sidebar buttons for Edge
Edge doesn't know :focus-within, so use :focus instead.

--- a/_sass/jekyll-wgdd/_sidebar.scss
+++ b/_sass/jekyll-wgdd/_sidebar.scss
@@ -41,6 +41,10 @@ aside.page-side {
       outline: none !important;
     }
 
+    &:focus ~ ul {
+		display: block;
+	}
+
     i {
       display: block;
       font-size: $nav-button-size;
