Create a clickable navigation sidebar
Added a a title and a close button to the navigation. In the header and footer
these buttons and headers are ignored. In the navigation use the close button
to close the navigation sidebar.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,15 +2,21 @@
 
 <nav class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}"
      aria-labelledby="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title">
-  <button class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title"
-          id="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title"
+  <span class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title"
+        id="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title"
+        >{%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</span>
+  <button class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-open"
           >Open {%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</button>
+  <button class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-close"
+          >Close {%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</button>
 {%- if nav %}
+<div class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-container">
 <ul id="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-list"
     class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-list">
 {% for item in nav -%}
 {% include navigation-item.html entry=item -%}
 {% endfor -%}
 </ul>
+</div>
 {%- endif %}
 </nav>
