--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -23,6 +23,7 @@ $head-padding-top: 10px;
 $head-nav-padding-top: 10px;
 
 $nav-button-size: 40px;
+$nav-max-width: 250px;
 
 $foot-padding-bottom: $head-padding-top;
 $foot-height: 3em;
