--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -1,5 +1,6 @@
 nav.page-navigation-main {
   position: fixed !important;
+  //position: sticky !important;
   top: 0;
   left: 0;
   padding-left: 1px;
@@ -7,21 +8,30 @@ nav.page-navigation-main {
   min-height: 100%;
   width: 0;
 
-  #page-navigation-main-title {
+  .page-navigation-main-title {
+    display: none;
+  }
+
+  .page-navigation-main-open,
+  .page-navigation-main-close {
     display: block;
     position: absolute;
     width: $nav-button-size;
     height: 0;
     padding-top: $nav-button-size;
     overflow: hidden;
-    border: 1px solid #ccc;
     background: white 10px 10px / 20px 20px no-repeat;
+    margin-top: $head-padding-top;
+  }
+
+  .page-navigation-main-open {
+    display: block;
+    margin-left: 2*$head-padding-top - 1;
+    border: 1px solid #ccc;
     background-image: -webkit-repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
     background-image: repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
     z-index: $navbar-z-index + 1;
     transition: box-shadow 0.5s ease-in-out;
-    margin-top: $head-padding-top;
-    margin-left: 2*$head-padding-top - 1;
 
     &:hover {
       @extend %header-box-shadow;
@@ -29,72 +39,98 @@ nav.page-navigation-main {
     }
   }
 
-  ul.page-navigation-main-list {
+  .page-navigation-main-close {
+    display: none;
+    left: $nav-max-width + 2*$head-padding-top;
+    margin-right: $head-padding-top;
+    z-index: $navbar-z-index + 10000;
+    background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
+                      linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
+    @extend %header-box-shadow;
+    transition: 0.3s;
+  }
+
+  div.page-navigation-main-container {
     display: none;
     position: fixed;
-    //background-image: linear-gradient(to left, $foot-background-color, $page-background-color);
-    background-color: $nav-background-color;
     top: 0;
     left: 0;
-    min-width: 14%;
-    padding-top: 2 * $head-padding-top + $nav-button-size;
-    box-shadow: /*inset*/ 0px 8px 16px 0px rgba(0,0,0,0.2);
-    min-height: 100%;
-    transition: 1s;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    z-index: $navbar-z-index + 5;
 
-    li {
+    ul.page-navigation-main-list {
       display: block;
+      background-color: $nav-background-color;
+      //width: 20%;
+      max-width: $nav-max-width;
+      padding-top: 2*$head-padding-top + $nav-button-size;
+      box-shadow: /*inset*/ 0px 8px 16px 0px rgba(0,0,0,0.2);
+      min-height: 100%;
+      transition: 1s;
 
-      button {
-        background: none !important;
-        color: inherit;
-        border: inherit;
-        padding: inherit;
-        font: inherit;
-        cursor: pointer;
-        padding: 5px 0;
+      li {
         display: block;
-        width: 100%;
-        text-align: left;
-        line-height: initial;
-        padding: 5px 0 5px 2*$head-padding-top;
 
-        &:after {
-          content: "\25bc";
-          text-align: right;
-        }
-
-        &:active ~ ul,
-        &:focus ~ ul {
+        button {
+          background: none !important;
+          color: inherit;
+          border: inherit;
+          padding: inherit;
+          font: inherit;
+          cursor: pointer;
+          padding: 5px 0;
           display: block;
+          width: 100%;
+          text-align: left;
+          line-height: initial;
+          padding: 5px 0 5px 2*$head-padding-top;
+
+          &:after {
+            content: "\25bc";
+            text-align: right;
+          }
+
+          &:active ~ ul,
+          &:focus ~ ul {
+            display: block;
+          }
         }
-      }
 
-      ul {
-        display: none;
-        background-color: #fff;
-      }
+        ul {
+          display: none;
+          background-color: #fff;
+        }
 
-      a {
-        display: block;
-        padding: 5px 0 5px 2*$head-padding-top;
-        text-decoration: none;
-        color: #000;
+        a {
+          display: block;
+          padding: 5px 0 5px 2*$head-padding-top;
+          text-decoration: none;
+          color: #000;
+        }
       }
     }
   }
 
   &:hover {
-
-    #page-navigation-main-title {
-      background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
-                        linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
-      @extend %header-box-shadow;
+   .page-navigation-main-container {
+      display: block;
     }
 
-    ul.page-navigation-main-list {
+    .page-navigation-main-close {
       display: block;
-      z-index: $navbar-z-index;
+
+      &:active,
+      &:focus {
+	display: none;
+
+        & ~ .page-navigation-main-container,
+        & ~ .page-navigation-main-container {
+          display: none;
+          transition: 0.6s;
+        }
+      }
     }
   }
 }
