Add a variable to page-toc
This variable will be used to determine the contents of the TOC (e.g. for the
blog, for home or a page).

--- a/_includes/page-toc.html
+++ b/_includes/page-toc.html
@@ -1,3 +1,4 @@
+{%- unless include.type == 'blog' -%}
 <aside class="page-toc" aria-labelledby="page-toc-label">
   <nav class="page-toc-nav" aria-labelledby="page-toc-label">
     <header class="page-toc-header">
@@ -10,3 +11,4 @@
     </ul>
   </nav>
 </aside>
+{%- endunless -%}
