--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,10 @@
 <header class="page-header" id="page-label" aria-label="Page title">
 
+<div class="page-title" id="page-title"><a href="{{ site.url | absolute_url }}"><span>{{ site.title }}</span></a></div>
+
 {% if site.data.navigation["header"] %}
 {% include navigation.html scope="header" %}
 {% endif %}
-
-  <span class="page-title" id="page-title"><a href="{{ site.url }}">{{ site.title }}</a></span>
-<!--
-  <span class="page-banner">
-    <a href="http://www.debian.org" title="Debian GNU/Linux Project">
-      <img src="http://www.debian.org/banners/debian.png" alt="Debian GNU/Linux Project - www.debian.org"/>
-    </a>
-  </span>
--->
 
 </header>
 
