Define the minimum header height

--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -18,6 +18,7 @@ $nav-background-color:  $head-background-color;
 $foot-background-color: $head-background-color;
 $highligher-background-color: Azure;
 
+$head-min-height: 10em;
 $head-height: 4em;
 $head-padding-top: 10px;
 $head-nav-padding-top: 10px;
