--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-type: Blog
+layout: page
+schema: BlogPosting
 ---
 
 {%- assign date_format = site.jekyll_wgdd.site_conf.date_format | default: "%Y-%m-%d %H:%M" -%}
