Fix the argument

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
     {% include page-sidebar.html -%}
 
-    {% include page-toc.html type=page.type -%}
+    {% include page-toc.html type=layout.type -%}
 
     {% include main.html -%}
 
