Add height for header depending on viewport

--- a/_sass/jekyll-wgdd/_header.scss
+++ b/_sass/jekyll-wgdd/_header.scss
@@ -4,8 +4,7 @@
   //margin: 5em 0 0 0;
   padding: $head-padding-top 1em;
   width: 100% !important;
-  height: auto !important;
-  min-height: 15em;
+  height: 75vh !important;
   background-image: linear-gradient(to left top, $head-background-color, $page-background-color);
   text-align: center;
 
