--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,21 +1,31 @@
-{% assign nav = site.data.navigation[include.scope] -%}
+{%  assign nav = site.data.navigation[include.scope] -%}
+{%- assign class = "page-navigation" -%}
+{%- if include.scope -%}
+{%- assign class = class | append: "-" | append: include.scope -%}
+{%- endif -%}
 
-<nav class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}"
-     aria-labelledby="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title">
-  <span class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title"
-        id="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-title"
+<nav class="{{ class }}"
+     aria-labelledby="{{ class }}-title">
+  <span class="{{ class }}-title"
+        id="{{ class }}-title"
         >{%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</span>
-  <button class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-open"
-          >Open {%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</button>
-  <button class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-close"
-          >Close {%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</button>
+  <input id="{{ class }}-control"
+         class="{{ class }}-control"
+         type="checkbox"
+         aria-haspopup="true"
+         aria-labelledby="{{ class }}-control-label"
+         aria-controls="{{ class }}-list"
+         >
+  <label id="{{ class }}-control-label"
+         class="{{ class }}-control {{ class }}-control-label"
+         for="{{ class }}-control"
+         >Open {%- if include.scope %} {{ include.scope }} {% endif -%}Page Navigation</label>
 {%- if nav %}
-<div class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-container">
-<ul id="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-list"
-    class="page-navigation{%- if include.scope -%}-{{ include.scope }}{%- endif -%}-list">
-{% for item in nav -%}
-{% include navigation-item.html entry=item -%}
-{% endfor -%}
+<div class="{{ class }}-container" role="menu" aria-modal="true">
+<ul id="{{ class }}-list" class="{{ class }}-list">
+{%- for item in nav -%}
+{%- include navigation-item.html entry=item -%}
+{%- endfor -%}
 </ul>
 </div>
 {%- endif %}
