--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -1,31 +1,28 @@
 nav.page-navigation-main {
   position: fixed !important;
-  //position: sticky !important;
   top: 0;
   left: 0;
   padding-left: 1px;
   z-index: $navbar-z-index;
-  min-height: 100%;
+  height: 100%;
   width: 0;
 
   .page-navigation-main-title {
     display: none;
   }
 
-  .page-navigation-main-open,
-  .page-navigation-main-close {
+  .page-navigation-main-control {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
     display: block;
     position: absolute;
     width: $nav-button-size;
-    height: 0;
+    height: $nav-button-size;
     padding-top: $nav-button-size;
-    overflow: hidden;
+    //overflow: hidden;
     background: white 10px 10px / 20px 20px no-repeat;
     margin-top: $head-padding-top;
-  }
-
-  .page-navigation-main-open {
-    display: block;
     margin-left: 2*$head-padding-top - 1;
     border: 1px solid #ccc;
     background-image: -webkit-repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
@@ -33,112 +30,117 @@ nav.page-navigation-main {
     z-index: $navbar-z-index + 1;
     transition: box-shadow 0.5s ease-in-out;
 
+    ~ label {
+      display: none;
+    }
+
+    &:checked {
+      position: fixed;
+      top: 0;
+      right: 0;
+      margin-right: $head-padding-top;
+      z-index: $navbar-z-index + 10000;
+      background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
+                        linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
+      @extend %header-box-shadow;
+      transition: 0.3s;
+
+      & ~ .page-navigation-main-container {
+        display: block;
+      }
+    }
+
     &:hover {
       @extend %header-box-shadow;
       transition: all 0.5s ease-in-out;
     }
   }
 
-  .page-navigation-main-close {
-    display: none;
-    left: $nav-max-width + 2*$head-padding-top;
-    margin-right: $head-padding-top;
-    z-index: $navbar-z-index + 10000;
-    background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
-                      linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
-    @extend %header-box-shadow;
-    transition: 0.3s;
-  }
-
   div.page-navigation-main-container {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    width: 100vw;
     height: 100%;
+    height: 100vh;
     background: rgba(0,0,0,0.3);
     z-index: $navbar-z-index + 5;
+    overflow-y: auto;
 
     ul.page-navigation-main-list {
-      display: block;
+      display: -webkit-flex;
+      -webkit-flex-direction: row;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
       background-color: $nav-background-color;
-      //width: 20%;
-      max-width: $nav-max-width;
       padding-top: 2*$head-padding-top + $nav-button-size;
       box-shadow: /*inset*/ 0px 8px 16px 0px rgba(0,0,0,0.2);
       min-height: 100%;
       transition: 1s;
+      min-width: 25%;
 
-      li {
+      //@media (max-width: 800px) {
+      //  min-width: 50%;
+      //}
+
+      //@media (max-width: 400px) {
+      //  min-width: 100%;
+      //}
+
+      > li {
         display: block;
+        align-content: space-between;
+        flex: 25%;
+        max-width: 25%;
+        height: auto;
+        font-weight: bold;
+
+        @media (max-width: 800px) {
+          flex: 50%;
+          max-width: 50%;
+        }
+
+        @media (max-width: 400px) {
+          flex: 100%;
+          max-width: 100%;
+        }
 
         button {
+          -moz-appearance: none;
+          -webkit-appearance: none;
+          appearance: none !important;
           background: none !important;
-          color: inherit;
           border: inherit;
           padding: inherit;
           font: inherit;
-          cursor: pointer;
-          padding: 5px 0;
-          display: block;
+          //cursor: pointer;
           width: 100%;
           text-align: left;
           line-height: initial;
-          padding: 5px 0 5px 2*$head-padding-top;
+          border-style: outset;
+        }
 
-          &:after {
-            content: "\25bc";
-            text-align: right;
+        button, a {
+          display: block;
+          padding: 5px 0 5px 2*$head-padding-top;
+          color: inherit;
+          text-decoration: none;
+
+          i {
+            margin-left: 5px;
           }
         }
 
         ul {
-          display: none;
-          background-color: #fff;
+          list-style-type: none;
+          border-left: 1px solid #ccc;
+          font-weight: normal;
         }
 
-        &:focus-within ul {
-          display: block;
-        }
-
-        &[focus-within] {
-          display: block;
-        }
-
-        a {
-          display: block;
-          padding: 5px 0 5px 2*$head-padding-top;
-          text-decoration: none;
-          color: #000;
-        }
-      }
-    }
-  }
-
-  &:hover {
-   .page-navigation-main-container {
-      display: block;
-    }
-
-    .page-navigation-main-close {
-      display: block;
-
-      &:active,
-      &:focus {
-	display: none;
-
-        & ~ .page-navigation-main-container,
-        & ~ .page-navigation-main-container {
-          display: none;
-          transition: 0.6s;
-        }
       }
     }
   }
 }
-
-//#page-navigation-main-title:focus + ul.page-navigation-main-list {
-//  display: block;
-//}
-
