--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -23,6 +23,7 @@ $head-height: 4em;
 $head-padding-top: 10px;
 $head-nav-padding-top: 10px;
 
+$nav-button-padding: $head-nav-padding-top;
 $nav-button-size: 40px;
 $nav-max-width: 250px;
 
