--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -22,8 +22,8 @@ nav.page-navigation-main {
     padding-top: $nav-button-size;
     //overflow: hidden;
     background: white 10px 10px / 20px 20px no-repeat;
-    margin-top: $head-padding-top;
-    margin-left: 2*$head-padding-top - 1;
+    margin-top: $nav-button-padding;
+    margin-left: 2*$nav-button-padding - 1;
     border: 1px solid #ccc;
     background-image: -webkit-repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
     background-image: repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
@@ -38,7 +38,7 @@ nav.page-navigation-main {
       position: fixed;
       top: 0;
       right: 0;
-      margin-right: $head-padding-top;
+      margin-right: $nav-button-padding;
       z-index: $navbar-z-index + 10000;
       background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
                         linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
@@ -76,7 +76,7 @@ nav.page-navigation-main {
       flex-direction: row;
       flex-wrap: wrap;
       background-color: $nav-background-color;
-      padding-top: 2*$head-padding-top + $nav-button-size;
+      padding-top: 2*$nav-button-padding + $nav-button-size;
       box-shadow: /*inset*/ 0px 8px 16px 0px rgba(0,0,0,0.2);
       min-height: 100%;
       transition: 1s;
@@ -125,7 +125,7 @@ nav.page-navigation-main {
 
         button, a {
           display: block;
-          padding: 5px 0 5px 2*$head-padding-top;
+          padding: 5px 0 5px 2*$nav-button-padding;
           color: inherit;
           text-decoration: none;
 
