--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -20,7 +20,6 @@ nav.page-navigation-main {
     width: $nav-button-size;
     height: $nav-button-size;
     padding-top: $nav-button-size;
-    //overflow: hidden;
     background: white 10px 10px / 20px 20px no-repeat;
     margin-top: $nav-button-padding;
     margin-left: 2*$nav-button-padding - 1;
@@ -37,8 +36,8 @@ nav.page-navigation-main {
     &:checked {
       position: fixed;
       top: 0;
-      right: 0;
-      margin-right: $nav-button-padding;
+      left: 0;
+      //margin-left: $nav-button-padding;
       z-index: $navbar-z-index + 10000;
       background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
                         linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
@@ -72,40 +71,33 @@ nav.page-navigation-main {
     ul.page-navigation-main-list {
       display: -webkit-flex;
       -webkit-flex-direction: row;
+      -webkit-flex-wrap: wrap;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       background-color: $nav-background-color;
       padding-top: 2*$nav-button-padding + $nav-button-size;
-      box-shadow: /*inset*/ 0px 8px 16px 0px rgba(0,0,0,0.2);
-      min-height: 100%;
+      padding-bottom: 1rem;
       transition: 1s;
-      min-width: 25%;
+      width: 100%;
 
-      //@media (max-width: 800px) {
-      //  min-width: 50%;
-      //}
-
-      //@media (max-width: 400px) {
-      //  min-width: 100%;
-      //}
+      @media (max-width: 400px) {
+        -webkit-flex-direction: column;
+        -webkit-flex-wrap: nowrap;
+        flex-direction: column;
+        flex-wrap: nowrap;
+      }
 
       > li {
         display: block;
         align-content: space-between;
-        flex: 25%;
-        max-width: 25%;
+        flex: auto;
+        max-width: 20%;
         height: auto;
         font-weight: bold;
 
         @media (max-width: 800px) {
-          flex: 50%;
           max-width: 50%;
-        }
-
-        @media (max-width: 400px) {
-          flex: 100%;
-          max-width: 100%;
         }
 
         button {
